# trustchain

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/: App.tsx  main.tsx
src/components/: NavBar.tsx  TrustScoreBreakdown.tsx
src/pages/: Dashboard.tsx  Home.tsx  Login.tsx
src/trustchain_backend/: Cargo.toml  main.mo  trustchain_backend.did
src/trustchain_backend/src/: lib.rs  model.rs
src/trustchain_frontend/: package.json
src/trustchain_frontend/src/: App.css  App.jsx
src/trustchain_frontend/src/components/: Activity.jsx  Dashboard.jsx  ReputationForm.jsx  Stake.jsx
