# canisters/src/reputation/Cargo.toml

[package]
name = "trustchain_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "=0.10.13"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
linfa = { version = "0.7.1", default-features = false }
linfa-logistic = { version = "0.7.1", optional = true }
ndarray = { version = "0.15.6", features = ["serde"] }
getrandom = { version = "0.2.15", features = ["custom"] }
lazy_static = "1.5.0"
itertools = "0.14.0"
futures = "0.3.31"
bincode = "1.3.3"
serde_json = "1.0.140"